--- a/site/Home/index.html
+++ b/site/Home/index.html
@@ -432,7 +432,7 @@
                 
                 <h1 id="bdb-slayer">BDB-Slayer</h1>
 <h2 id="note">NOTE</h2>
-<p>I'm trying out some doc hosting stuff on this repo for fun and to make it look a bit nicer. The readthedocs page is here: <a href="https://bdb-slayer.readthedocs.io/en/latest/">GitHub Pages Site</a></p>
+<p>I'm trying out some doc hosting stuff on this repo for fun and to make it look a bit nicer. The readthedocs page is here: <a href="https://qporzk.github.io/BDB-Slayer/">GitHub Pages Site</a></p>
 <p>This repo is meant to be a knowledge base for mods to the Breville Dual Boiler espresso machine. This focuses on (but is not limited to) the rerouting of tubes to the hot water needle valve to enable flow profiling. Background here: <a href="https://www.home-barista.com/espresso-machines/breville-dual-boiler-slayer-shots-t54849.html">Home Barista Thread</a></p>
 <p><img alt="Sample Image" src="https://raw.githubusercontent.com/qporzk/BDB-Slayer/master/docs/Pictures/BDB.jpg" /></p>
 <h2 id="sections">Sections</h2>
